Exp-2/output/hf-eval-data-v3-reuslt-7b-eval/f00885_generate_response.err
  File "./f00885_generate_response.py", line 53
    response += '\n' + resp[0].replace('summarize: ', '').replace("'
                                                                   ^
SyntaxError: EOL while scanning string literal
